[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Jugador/spr_jugador.png" type="Texture" id=1]
[ext_resource path="res://Scripts/JugadorControl.gd" type="Script" id=2]
[ext_resource path="res://Objects/ProyectilJugador.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/JugadorEscudosVisualizador.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Jugador/spr_jugador_escudo.png" type="Texture" id=5]
[ext_resource path="res://Objects/JugadorMuerto.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/Efectos/sfx_jugador_damage.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Efectos/sfx_wpn_laser5.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Efectos/sfx_sounds_powerup2.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.1818, 10.7863 )

[sub_resource type="Animation" id=2]
resource_name = "anim_jugador_disparando"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim_jugador_normal"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.895508, 0.240493, 0.111938, 1, 1, 0.522339, 0.289063, 0 )

[node name="Jugador" type="Area2D" groups=[
"jugador",
]]
script = ExtResource( 2 )
proyectil = ExtResource( 3 )
jugadorMuerto = ExtResource( 6 )
escudos = 1
velocidadDisparo = 5.0
cadenciaDisparo = 1.0
damage = 1.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisualizadorEscudos" type="Node2D" parent="."]
script = ExtResource( 4 )
spriteEscudos = ExtResource( 5 )

[node name="TiempoEntreDisparos" type="Timer" parent="."]
one_shot = true

[node name="TiempoInvencibilidad" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim_jugador_disparando = SubResource( 2 )
anims/anim_jugador_normal = SubResource( 3 )

[node name="SonidoPerderVida" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0
bus = "Efectos"

[node name="SonidoDisparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Efectos"

[node name="SonidoPowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Efectos"

[node name="ParticulasJetpack" type="CPUParticles2D" parent="."]
position = Vector2( -15.6039, -6.61195 )
z_index = -1
amount = 16
local_coords = false
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 720.0
angular_velocity_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Jugador_area_entered"]
[connection signal="timeout" from="TiempoEntreDisparos" to="." method="_on_TiempoEntreDisparos_timeout"]
[connection signal="timeout" from="TiempoInvencibilidad" to="." method="_on_TiempoInvencibilidad_timeout"]
